# coingecko_fetcher

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  gecko_fetcher.py  gecko_fetcher.service  gecko_fetcher_periodical.py  pyproject.toml  requirements-dev.txt  requirements-test.txt
.github/workflows/: ci.yml
src/coingecko_fetcher/: __init__.py  fetcher.py
tests/: test_gecko_fetcher.py
